--- a/languages/microformats2.pot
+++ b/languages/microformats2.pot
@@ -1,10 +1,10 @@
 # Copyright (C) 2017 pfefferle
-# This file is distributed under the same license as the uf2 package.
+# This file is distributed under the same license as the Microformats 2 package.
 msgid ""
 msgstr ""
-"Project-Id-Version: uf2 1.0.0-dev\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/uf2\n"
-"POT-Creation-Date: 2017-06-17 18:57:11+00:00\n"
+"Project-Id-Version: Microformats 2 1.0.0\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/microformats2\n"
+"POT-Creation-Date: 2017-06-19 11:58:15+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -14,15 +14,15 @@ msgstr ""
 "X-Generator: grunt-wp-i18n 0.5.4\n"
 
 #. Plugin Name of the plugin/theme
-msgid "uf2"
+msgid "Microformats 2"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "https://github.com/pfefferle/wordpress-uf2"
+msgid "https://github.com/indieweb/wordpress-microformats2"
 msgstr ""
 
 #. Description of the plugin/theme
-msgid "Adds microformats2 support to your WordPress theme"
+msgid "Adds microformats2 support to your WordPress installation or theme"
 msgstr ""
 
 #. Author of the plugin/theme
