--- a/languages/wp-uf2.pot
+++ b/languages/wp-uf2.pot
@@ -1,20 +1,20 @@
-# Copyright (C) 2017 IndieWeb WordPress Outreach Club
-# This file is distributed under the same license as the wp-uf2 package.
+# Copyright (C) 2018 IndieWeb WordPress Outreach Club
+# This file is distributed under the same license as the Microformats 2 package.
 msgid ""
 msgstr ""
-"Project-Id-Version: wp-uf2 1.0.0\n"
+"Project-Id-Version: Microformats 2 1.1.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wp-uf2\n"
-"POT-Creation-Date: 2017-06-21 07:04:17+00:00\n"
+"POT-Creation-Date: 2018-02-18 20:16:04+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2017-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2018-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "X-Generator: grunt-wp-i18n 0.5.4\n"
 
 #. Plugin Name of the plugin/theme
-msgid "wp-uf2"
+msgid "Microformats 2"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
@@ -22,7 +22,7 @@ msgid "https://github.com/indieweb/wordpress-uf2"
 msgstr ""
 
 #. Description of the plugin/theme
-msgid "Adds microformats2 support to your WordPress installation or theme"
+msgid "Adds Microformats 2 support to your WordPress installation or theme"
 msgstr ""
 
 #. Author of the plugin/theme
